Working on the main content

--- a/styles/small.css
+++ b/styles/small.css
@@ -170,6 +170,17 @@ main {
     gap: 20px;
     margin: 20px;
 }
+ .about-me {
+
+ }
+
+ .student-photo {
+
+ }
+
+ .certificate-box {
+    
+ }
 
 main section {
     border-radius: 5px;
