--- a/chamber/styles/global.css
+++ b/chamber/styles/global.css
@@ -109,7 +109,9 @@ header {
 }
 
 .logo-chamber {
-    width: 70px;
+    width: 100px;
+    height: auto;
+    object-fit: contain;
     padding: 10px 5px;
 }
 
@@ -192,29 +194,29 @@ nav li:last-child {
 
 /* Discover page */
 
-/* Estilo general */
+/* General style */
 main.discover {
     display: grid;
     grid-template-columns: 1fr;
-    /* Una columna por defecto (para pantallas pequeñas) */
+    /* Single-column by default (for small screens) */
     gap: 20px;
     padding: 20px;
     width: 100%;
-    /* Ocupa todo el ancho por defecto */
+    /* Takes up full width by default */
     max-width: 700px;
-    /* Máximo ancho para pantallas grandes */
+    /* Maximum width for large screens */
     margin: 0 auto;
-    /* Centrar el contenido en la pantalla */
+    /* Center the content on the scree */
 }
 
-/* Sidebar en una columna */
+/* Sidebar in a single column */
 .discover .side-bar {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-/* Artículos en la barra lateral */
+/* Articles in the sidebar */
 .discover .side-bar article {
     background-color: var(--paragraph-background-white);
     border: 1px solid var(--big-fish-to-fry);
@@ -223,7 +225,7 @@ main.discover {
     box-shadow: var(--box-shadow);
 }
 
-/* Estilo para el artículo de evento futuro */
+/* Style for the future event article */
 .article-02 img {
     width: 100%;
     height: auto;
@@ -243,7 +245,7 @@ main.discover {
     margin-bottom: 10px;
 }
 
-/* Estilos del calendario */
+/* Calendar styles */
 #calendar {
     font-family: Arial, sans-serif;
     font-size: 12px;
@@ -271,7 +273,7 @@ main.discover {
     background-color: red;
 }
 
-/* Sección de Demografía */
+/* Demographics Section */
 .article-01 {
     font-family: var(--open-sans-paragraph-font);
     font-weight: var(--open-sans-font-weight);
@@ -295,7 +297,7 @@ main.discover {
 
 .article-01 ul {
     list-style-type: none;
-    /* Quitar viñetas */
+    /* Remove bullet points */
     padding: 0;
 }
 
@@ -310,11 +312,11 @@ main.discover {
     font-weight: var(--poppins-bold-font-weight);
 }
 
-/* Sección de fotos locales */
+/* Local photo section */
 .local-photos {
     display: grid;
     grid-template-columns: 1fr;
-    /* Una columna en pantallas pequeñas */
+    /* One column on small screens */
     gap: 20px;
     margin: 20px 0;
     justify-items: center;
@@ -348,7 +350,6 @@ main.discover {
 footer {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 15px;
     border-top: 1px solid #00000051;
     padding: 10px;
@@ -374,18 +375,30 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 2rem;
+    align-items: flex-start;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    gap: 2rem;    
 }
 
 .contact-info,
 .social-media,
 .footer-note {
-    flex: 1 1 250px;
+    flex: 1 1 300px;
+}
+
+.social-media {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
 
 .social-media a img {
     width: 32px;
     margin-right: 0.5rem;
+
 }
 
 a {
@@ -446,8 +459,9 @@ a {
     }
 
     /*nav a:hover:not(.active) {
-    color: var(--nav-hover-link-color);
-}*/
+        color: var(--nav-hover-link-color);
+    }*/
+    
     .nav-a:hover {
         color: var(--nav-hover-link-color);
     }
